--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Time</title>
+
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2 id="weekday">veckodag</h2>
+    <h3 id="weekday">veckodag</h3>
     <h2 id="time">time</h2>
+    <h3 id="month">4 Månad</h3>
 </body>
 </html>
