--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3 id="weekday">veckodag</h3>
     <h2 id="time">time</h2>
-    <h3 id="month">4 Månad</h3>
+    <h3 id="weekday">veckodag</h3><h3 id="month">4 Månad</h3>
 </body>
 </html>
